--- a/src/utils/style/Planner.css
+++ b/src/utils/style/Planner.css
@@ -2,7 +2,7 @@
   background-color: antiquewhite;
   display: grid;
   grid-template-columns: repeat(11, minmax(224px, auto));
-  grid-template-rows: 328px 50px repeat(9, 1fr);
+  grid-template-rows: 328px 50px repeat(9, minmax(60px, auto));
   column-gap: 4px;
   grid-auto-flow: column;
   min-width: 1920px;
@@ -17,6 +17,8 @@
   grid-template-rows: repeat(5, 1fr);
   column-gap: 4px;
   outline: 1px solid black;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .title {
@@ -47,7 +49,6 @@
   display: grid;
   grid-column: 2 / span 10;
   grid-auto-flow: column;
-  /* grid-template-rows: minmax(60px, auto); */
   grid-template-columns: repeat(10, 1fr);
   column-gap: 4px;
   outline: 1px solid black;
