--- a/src/assets/style/Planner.css
+++ b/src/assets/style/Planner.css
@@ -1,5 +1,5 @@
 .grid {
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   display: grid;
   grid-template-columns: repeat(11, minmax(224px, auto));
   grid-template-rows: 328px 50px repeat(9, minmax(60px, auto));
@@ -9,7 +9,7 @@
 }
 
 .mustBeAssign {
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   display: grid;
   grid-column: 1 / span 11;
   grid-auto-flow: column;
@@ -17,12 +17,10 @@
   grid-template-rows: repeat(5, 1fr);
   column-gap: 4px;
   outline: 1px solid black;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
+  }
 
 .title {
-  background-color: white;
+  /* background-color: white; */
   display: grid;
   grid-column: 1 / span 11;
   grid-auto-flow: column;
@@ -34,7 +32,7 @@
 }
 
 .title > p {
-  background-color: #ffcc00;
+  /* background-color: #ffcc00; */
   margin: 0;
   height: 100%;
   width: 100%;
@@ -45,7 +43,7 @@
 }
 
 .row {
-  background-color: white;
+  /* background-color: white; */
   display: grid;
   grid-column: 2 / span 10;
   grid-auto-flow: column;
@@ -55,7 +53,7 @@
 }
 
 .ressource {
-  background-color: #f59d19;
+  /* background-color: #f59d19; */
   display: grid;
   justify-items: center;
   align-items: center;
@@ -70,7 +68,7 @@
 }
 
 .newEntry {
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   grid-row: 3 / span 9;
   outline: 1px solid black;
 }
@@ -78,29 +76,17 @@
 .invoicing,
 .correction,
 .mustBeFix {
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   grid-auto-rows: minmax(min-content, max-content);
   outline: 1px solid black;
 }
 
-.invoicing {
-  filter: brightness(25%);
-}
-
-.correction {
-  filter: brightness(50%);
-}
-
-.mustBeFix {
-  filter: brightness(75%);
-}
-
 .week {
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   display: grid;
   /* grid-template-rows: repeat(6, 1fr); */
   grid-auto-rows: minmax(min-content, max-content);
-  /* row-gap: 4px; */
+  row-gap: 4px;
   outline: 1px solid black;
 }
 
