--- a/src/assets/style/Planner.css
+++ b/src/assets/style/Planner.css
@@ -49,6 +49,7 @@
   grid-column: 2 / span 10;
   grid-auto-flow: column;
   grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 50% 50%;
   column-gap: 4px;
   outline: 1px solid black;
 }
@@ -56,6 +57,7 @@
 .ressource {
   /* background-color: #f59d19; */
   display: grid;
+  grid-row: 1 / span 2;
   justify-items: center;
   align-items: center;
   outline: 1px solid black;
@@ -79,6 +81,7 @@
 .mustBeFix {
   /* background-color: antiquewhite; */
   grid-auto-rows: minmax(min-content, max-content);
+  grid-row: 1;
   outline: 1px solid black;
 }
 
@@ -87,6 +90,7 @@
   display: grid;
   /* grid-template-rows: repeat(6, 1fr); */
   grid-auto-rows: minmax(min-content, max-content);
+  grid-row: 1;
   row-gap: 4px;
   outline: 1px solid black;
 }
