--- a/src/assets/style/Planner.css
+++ b/src/assets/style/Planner.css
@@ -49,7 +49,7 @@
   grid-column: 2 / span 10;
   grid-auto-flow: column;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 50% 50%;
+  grid-template-rows: minmax(66px, max-content) 33px;
   column-gap: 4px;
   outline: 1px solid black;
 }
@@ -81,7 +81,7 @@
 .mustBeFix {
   /* background-color: antiquewhite; */
   grid-auto-rows: minmax(min-content, max-content);
-  grid-row: 1;
+  grid-row: 1 / span 2;
   outline: 1px solid black;
 }
 
@@ -93,6 +93,7 @@
   grid-row: 1;
   row-gap: 4px;
   outline: 1px solid black;
+  /* height: 66px; */
 }
 
 #w1 {
@@ -117,4 +118,26 @@
 
 #w6 {
   grid-column: 10;
+}
+
+.loadRate {
+  display: grid;
+  grid-column: 5 / span 6;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(6, 1fr);
+  row-gap: 4px;
+  column-gap: 4px;
+}
+
+#loadRate1,
+#loadRate2,
+#loadRate3,
+#loadRate4,
+#loadRate5,
+#loadRate6 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  outline: 1px solid black;
 }
