--- a/frontend/src/assets/style/Planner.css
+++ b/frontend/src/assets/style/Planner.css
@@ -56,11 +56,19 @@
 
 .ressource {
   /* background-color: #f59d19; */
-  display: grid;
   grid-row: 1 / span 2;
+  display: flex;
   justify-items: center;
   align-items: center;
   outline: 1px solid black;
+}
+
+.ressourceItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-left: 8px;
 }
 
 .ressource > p {
@@ -140,4 +148,8 @@
   align-items: center;
   font-weight: bold;
   outline: 1px solid black;
+}
+
+.loadRateAvatar {
+  margin-right: 4px;
 }
