✨ Possibility to assign an engineer to a project and automatic filling of the draftsman according to drag and drop

--- a/frontend/src/assets/style/ProjectCardSettingsModal.css
+++ b/frontend/src/assets/style/ProjectCardSettingsModal.css
@@ -32,12 +32,27 @@
   align-items: flex-start;
 }
 
+.multiRessourcesSelectTitle {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.multiRessourcesSelectInput {
+  width: 50%;
+}
+
 .honoraireTitle {
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
+.sousTraitanceInput {
+  width: 130px;
+}
 .honoraireMontantDevis,
 .avancementDatePicker,
 .avancementNumberInput {
