--- a/frontend/src/assets/style/Commercial.css
+++ b/frontend/src/assets/style/Commercial.css
@@ -2,3 +2,29 @@
   font-weight: bold;
   margin-bottom: 8px;
 }
+
+.mobileCustomerMenu {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.mobileCustomerMenuSelectContainer {
+  flex-direction: row;
+  padding: 0 16px;
+  gap: 8px;
+}
+
+.mobileCustomerMenuSelect {
+  width: calc(33%);
+  color: black;
+}
+
+@media (max-width: 576px) {
+  .mobileCustomerMenuSelect {
+    width: 100%;
+  }
+  .mobileCustomerMenuSelectContainer {
+    flex-direction: column;
+  }
+}
