✨ Adding the list of appointments and the possibility to edit them in a rich text editor

--- a/frontend/src/assets/style/Customer.css
+++ b/frontend/src/assets/style/Customer.css
@@ -10,6 +10,10 @@
   margin: 0 16px 0 16px;
 }
 
+.customerAppointmentAccordion {
+  margin: 16px 16px 0 16px;
+}
+
 .customerAccordionContent > div > div {
   margin: 0;
   padding: 0;
