--- a/frontend/src/assets/style/Customer.css
+++ b/frontend/src/assets/style/Customer.css
@@ -32,13 +32,17 @@
   width: calc(33% - 12px);
 }
 
-.customerItem {
-  margin: 0;
+.customerIdentityTitle {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.customerIdentityContainer {
+  display: grid;
+  grid-template-columns: max-content auto;
   align-items: center;
-  gap: 8px;
+  margin-top: 8px;
 }
 
 .customerClickableItem {
