--- a/frontend/src/assets/style/EditModeToggle.css
+++ b/frontend/src/assets/style/EditModeToggle.css
@@ -1,17 +1,17 @@
-.editAppointmentToggle {
+.editModeToggle {
   display: flex;
   gap: 8px;
   align-items: center;
   margin-bottom: 16px;
 }
 
-.editAppointmentToggleItem {
+.editModeToggleItem {
   display: flex;
   gap: 8px;
   align-items: center;
 }
 
-.editAppointmentToggleItem > p {
+.editModeToggleItem > p {
   margin: 0;
   cursor: pointer;
 }
