✨ Possibility to edit titles and dates of appointments

--- a/frontend/src/assets/style/Commercial.css
+++ b/frontend/src/assets/style/Commercial.css
@@ -10,13 +10,13 @@
 .mobileCustomerMenu {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .mobileCustomerMenuSelectContainer {
   flex-direction: row;
   padding: 0 16px;
   gap: 8px;
+  margin-bottom: 16px;
 }
 
 .mobileCustomerMenuSelect {
