--- a/frontend/src/assets/style/EditModeToggle.css
+++ b/frontend/src/assets/style/EditModeToggle.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 8px;
   align-items: center;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 
 .editModeToggleItem {
