--- a/frontend/src/assets/style/CustomerItem.css
+++ b/frontend/src/assets/style/CustomerItem.css
@@ -10,6 +10,10 @@
   margin: 0;
 }
 
-.customerItem > div {
+.customerItemInput {
   width: 100%;
 }
+/* 
+.customerItem > div {
+  width: 100%;
+} */
