--- a/frontend/src/assets/style/Appointment.css
+++ b/frontend/src/assets/style/Appointment.css
@@ -16,13 +16,23 @@
 }
 
 .appointmentAddressContainer,
-.appointmentContactMultiSelect {
+.appointmentContactContainer {
   width: 50%;
+}
+
+.appointmentContactContainer {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.appointmentContactContainer > div {
+  width: 100%;
 }
 
 @media (max-width: 1400px) {
   .appointmentAddressContainer,
-  .appointmentContactMultiSelect {
+  .appointmentContactContainer {
     width: 75%;
   }
 }
@@ -32,7 +42,7 @@
     flex-direction: column;
   }
   .appointmentAddressContainer,
-  .appointmentContactMultiSelect {
+  .appointmentContactContainer {
     width: 100%;
   }
 }
