🚧 Start to implement new customer form

--- a/frontend/src/assets/style/Commercial.css
+++ b/frontend/src/assets/style/Commercial.css
@@ -2,9 +2,14 @@
   margin-left: 16px;
 }
 
+.commercialList {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
 .commercialTab {
   font-weight: bold;
-  margin-bottom: 8px;
 }
 
 .mobileCustomerMenu {
