✨ Add Pdf Viewer when create a new customer

--- a/frontend/src/assets/style/newCustomer.css
+++ b/frontend/src/assets/style/newCustomer.css
@@ -1,6 +1,18 @@
+.newCustomerInputContainer {
+  display: flex;
+}
+
+.newCustomerInputContainerColumn {
+  width: 50%;
+}
+
 .newCustomerLogo {
   object-fit: contain;
   height: 150px;
   width: 150px;
   margin-top: 16px;
+}
+
+#pdfViewer {
+  margin-top: 8px;
 }
