--- a/frontend/src/assets/style/Customer.css
+++ b/frontend/src/assets/style/Customer.css
@@ -20,10 +20,22 @@
 }
 
 .customerLogo {
-  background-color: pink;
+  /* background-color: pink; */
   object-fit: contain;
   height: 150px;
   width: 150px;
+}
+
+.editCustomerLogo:hover {
+  background-color: pink;
+}
+
+.editCustomerLogo {
+  cursor: pointer;
+}
+
+#logoFileInput {
+  display: none;
 }
 
 .customerIdentity,
