--- a/frontend/src/assets/style/Customer.css
+++ b/frontend/src/assets/style/Customer.css
@@ -19,19 +19,39 @@
   padding: 0;
 }
 
+.customerLogoContainer {
+  position: relative;
+}
+
 .customerLogo {
-  /* background-color: pink; */
   object-fit: contain;
   height: 150px;
   width: 150px;
+  transition: filter 0.3s ease-in-out;
 }
 
-.editCustomerLogo:hover {
-  background-color: pink;
-}
-
-.editCustomerLogo {
+.editCustomerLogo:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+  background-image: url("../img/upload.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.75);
   cursor: pointer;
+}
+
+.editCustomerLogo:hover:before {
+  opacity: 1;
 }
 
 #logoFileInput {
