💄 Added Lottie animation in header + 🚑 Fixed errors after database connection

--- a/frontend/src/assets/style/Appointment.css
+++ b/frontend/src/assets/style/Appointment.css
@@ -30,6 +30,10 @@
   width: 100%;
 }
 
+a {
+  color: #fab005;
+}
+
 @media (max-width: 1400px) {
   .appointmentAddressContainer,
   .appointmentContactContainer {
