--- a/frontend/src/assets/style/Header.css
+++ b/frontend/src/assets/style/Header.css
@@ -19,7 +19,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* gap: 32px; */
   width: auto;
 }
 
@@ -30,12 +29,23 @@
   padding-left: 16px;
 }
 
-#logoHeader {
+.logoHeaderContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.LottieHeader {
+  height: 150%;
+}
+
+#LogoHeader {
   height: 75px;
 }
 
 @media (max-width: 950px) {
-  #logoHeader {
+  .logoHeaderContainer {
     display: none;
   }
 }
