✨ Add 2 images if search is empty or in progress + 📱Work on Header for small or mobile device

--- a/frontend/src/assets/style/Header.css
+++ b/frontend/src/assets/style/Header.css
@@ -7,19 +7,28 @@
   margin-bottom: 16px;
 }
 
+.header-mobile {
+  flex-direction: column;
+}
+
 .admin {
   display: flex;
   flex-direction: column;
   gap: 8px;
   padding-right: 16px;
-  border-right: 1px solid black;
+  border-right: 1px solid #dfe2e6;
 }
 
 .menu {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: auto;
+}
+
+.menu-mobile {
+  flex-direction: column;
 }
 
 .login {
@@ -38,11 +47,6 @@
 
 .LottieHeader {
   height: 150%;
-}
-
-.searchBar {
-  margin-top: auto;
-  width: 20%;
 }
 
 #LogoHeader {
