--- a/frontend/src/assets/style/Auth.css
+++ b/frontend/src/assets/style/Auth.css
@@ -6,14 +6,25 @@
 
 #userInfoContainer {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 4px;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 0 0 8px 0;
 }
 
 #userInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
+#userInfo > p {
   margin: 0;
   font-size: 1.25rem;
   font-weight: bold;
+}
+
+#userRole {
+  margin: 0;
+  font-style: italic;
 }
