--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -16,6 +16,14 @@
   }
 }
 
+.buttonsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .buttons {
   display: flex;
   align-items: center;
